<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/account_menu_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:subtitleTextColor="#FFFFFF"
            app:title="@string/account_menu"
            app:titleTextAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/accountCardView"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="@dimen/round_corner"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/accountUsername_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_username_title"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />

            <TextView
                android:id="@+id/accountUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

            <TextView
                android:id="@+id/accountRole_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/account_role_title"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />

            <TextView
                android:id="@+id/accountRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/logout_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/longbutton_height"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/half_default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:backgroundTint="@color/white"
        android:text="@string/Logout"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
        android:textColor="@color/red"
        app:cornerRadius="@dimen/round_corner"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>