<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BuildingSelectedActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500"
            app:menu="@menu/top_app_bar"
            app:subtitleTextColor="#FFFFFF"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_infoGedung"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/half_default_margin"
                app:cardCornerRadius="@dimen/round_corner"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/default_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cardTitle_buildingTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/empty"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/cardSubs_buildingStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunito_sans"
                        android:text="@string/empty"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/navigate_button"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@id/seeFloorMap_button"
                            android:layout_marginEnd="@dimen/quarter_default_margin"
                            android:text="@string/navigate_button"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button" />

                        <Button
                            android:id="@+id/seeFloorMap_button"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/quarter_default_margin"
                            android:text="@string/button_seeFloorplan"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button" />
                    </RelativeLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/banyakKorban_cardview"
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/round_corner"
                    app:cardElevation="@dimen/card_elevation">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/default_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cardTitle_victimQty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/cardTitle_victimQty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

                        <TextView
                            android:id="@+id/number_victimQty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="0dp"
                            android:text="@string/empty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline3" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_buildingInfo"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/half_default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/half_default_margin"
                app:cardCornerRadius="@dimen/round_corner"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/default_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cardTitle_buildingInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:text="@string/buildingInfoDetail"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/alamatSubs_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address_subs"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                        <TextView
                            android:id="@+id/alamat_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/half_default_margin"
                            android:text="@string/empty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                        <TextView
                            android:id="@+id/koordinatSubs_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/coord_subs"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                        <TextView
                            android:id="@+id/koordinat_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/half_default_margin"
                            android:text="@string/empty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                        <TextView
                            android:id="@+id/dimensiSubs_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dimens_subs"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                        <TextView
                            android:id="@+id/dimensi_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/half_default_margin"
                            android:text="@string/empty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                        <TextView
                            android:id="@+id/lantaiSubs_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/floor_subs"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                        <TextView
                            android:id="@+id/lantai_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/half_default_margin"
                            android:text="@string/empty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

                        <TextView
                            android:id="@+id/statusSubs_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/status_subs"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption" />

                        <TextView
                            android:id="@+id/status_detailGedung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/quarter_default_margin"
                            android:text="@string/empty"
                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/endSession_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/longbutton_height"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:backgroundTint="@color/white"
                android:text="@string/button_endSession"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
                android:textColor="@color/red"
                app:cornerRadius="@dimen/round_corner"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountCardView" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourth_default_margin"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>