<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/half_default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/half_default_margin"
        android:elevation="0dp"
        app:cardCornerRadius="@dimen/round_corner"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="@color/grey"
        app:strokeWidth="@dimen/stroke_width">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/chooseBuilding_buildingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6" />

            <TextView
                android:id="@+id/chooseBuilding_buildingAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseBuilding_buildingName"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2" />

            <TextView
                android:id="@+id/chooseBuilding_buildingStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseBuilding_buildingAddress"
                android:layout_marginTop="@dimen/half_default_margin"
                android:text="@string/empty"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1" />

            <Button
                android:id="@+id/chooseBuilding_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseBuilding_buildingStatus"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/chooseBuilding_button"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button" />

            <Button
                android:id="@+id/seeOnMap_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseBuilding_buildingStatus"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/half_default_margin"
                android:layout_toStartOf="@id/chooseBuilding_button"
                android:text="@string/seeOnMap_button"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
                android:textColor="@color/purple_500"
                app:cornerRadius="@dimen/round_corner" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>